consolidate home, sobre, contato CSS to global.css

--- a/localizacao/psicologo-jardim-da-penha/index.html
+++ b/localizacao/psicologo-jardim-da-penha/index.html
@@ -11,21 +11,21 @@
 			crossorigin
 		/>
 		
-		<link href="/_app/immutable/assets/0.C07eyZ2L.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.i4brXreN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/location.CpRLkkba.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DhJn-SlF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C1huiiTK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CjCA2YCO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bdq_5u_8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B4IhVmuV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D1o-FqZ0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CO7-BHcf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Env4YTSV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/hdPl7ErO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/YHP26O3U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/U-_Bk6m0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bcvf8PnL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B68WJjLM.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.qT-vLBP7.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.mtr4sqK7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C1jGsfTY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/gpSytu12.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D-ugS5tr.js">
@@ -71,15 +71,15 @@
 			
 			<script>
 				{
-					__sveltekit_drs5i1 = {
+					__sveltekit_luaa1h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DhJn-SlF.js"),
-						import("/_app/immutable/entry/app.CO7-BHcf.js")
+						import("/_app/immutable/entry/start.CjCA2YCO.js"),
+						import("/_app/immutable/entry/app.Env4YTSV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3, 15],
