--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 			crossorigin
 		/>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DhJn-SlF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C1huiiTK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CjCA2YCO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bdq_5u_8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B4IhVmuV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D1o-FqZ0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CO7-BHcf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Env4YTSV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/hdPl7ErO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/YHP26O3U.js">
@@ -28,15 +28,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_drs5i1 = {
+					__sveltekit_luaa1h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DhJn-SlF.js"),
-						import("/_app/immutable/entry/app.CO7-BHcf.js")
+						import("/_app/immutable/entry/start.CjCA2YCO.js"),
+						import("/_app/immutable/entry/app.Env4YTSV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
