--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.11S9Z-n3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/6taQEUIr.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.5zFjiqSv.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_mmmxqx = {
+					__sveltekit_ylogt2 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.11S9Z-n3.js"),
-						import("/_app/immutable/entry/app.5zFjiqSv.js")
+						import("/_app/immutable/entry/start.B1eZpBPG.js"),
+						import("/_app/immutable/entry/app.BbHIDiPh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
