--- a/agendar/index.html
+++ b/agendar/index.html
@@ -13,19 +13,19 @@
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/6.XbQ8J83m.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DOzBfGYh.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -41,7 +41,7 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/D3kYqz6j.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/O9apaAtU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DuyKRhc8.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/> <link rel="preload" href="/fonts/inter-400-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-500-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-600-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/><!----><!--ojxrft--><meta name="description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/agendar/"/> <meta property="og:url" content="https://psicologobernardo.com.br/agendar/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)"/> <meta property="og:description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)"/> <meta name="twitter:description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">[{"@context":"https://schema.org","@type":"MedicalBusiness","name":"Bernardo Carielo Psicólogo","image":"https://psicologobernardo.com.br/images/bernardo-avatar.jpg","telephone":"+5527998331228","priceRange":"$$","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"20:00"}],"aggregateRating":{"@type":"AggregateRating","ratingValue":"5.0","reviewCount":"65"}},{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Como funciona o agendamento online?","acceptedAnswer":{"@type":"Answer","text":"O agendamento é feito pela plataforma Doctoralia. Você escolhe uma data e horário disponível no calendário, preenche seus dados e recebe confirmação por email."}},{"@type":"Question","name":"O atendimento é presencial ou online?","acceptedAnswer":{"@type":"Answer","text":"Ofereço as duas modalidades. Você pode escolher entre atendimento presencial no consultório em Vitória/ES ou atendimento online via videochamada segura."}}]}]</script><!----><!--]--><!----><title>Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/DuyKRhc8.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/agendar/"/> <meta property="og:url" content="https://psicologobernardo.com.br/agendar/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)"/> <meta property="og:description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)"/> <meta name="twitter:description" content="Agende sua consulta com psicólogo em Vitória/ES. Atendimento presencial e online com Bernardo Carielo (CRP 16/5527). Horários flexíveis e agendamento fácil pela plataforma Doctoralia."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">[{"@context":"https://schema.org","@type":"MedicalBusiness","name":"Bernardo Carielo Psicólogo","image":"https://psicologobernardo.com.br/images/bernardo-avatar.jpg","telephone":"+5527998331228","priceRange":"$$","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"20:00"}],"aggregateRating":{"@type":"AggregateRating","ratingValue":"5.0","reviewCount":"65"}},{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Como funciona o agendamento online?","acceptedAnswer":{"@type":"Answer","text":"O agendamento é feito pela plataforma Doctoralia. Você escolhe uma data e horário disponível no calendário, preenche seus dados e recebe confirmação por email."}},{"@type":"Question","name":"O atendimento é presencial ou online?","acceptedAnswer":{"@type":"Answer","text":"Ofereço as duas modalidades. Você pode escolher entre atendimento presencial no consultório em Vitória/ES ou atendimento online via videochamada segura."}}]}]</script><!----><!--]--><!----><title>Agendar Consulta com Psicólogo em Vitória/ES | Bernardo Carielo (CRP 16/5527)</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -62,15 +62,15 @@
 			
 			<script>
 				{
-					__sveltekit_ylogt2 = {
+					__sveltekit_ipdxsp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1eZpBPG.js"),
-						import("/_app/immutable/entry/app.BbHIDiPh.js")
+						import("/_app/immutable/entry/start.92SP-Mtw.js"),
+						import("/_app/immutable/entry/app.z11e_xCV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
