--- a/contato/index.html
+++ b/contato/index.html
@@ -12,19 +12,19 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DOzBfGYh.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -37,7 +37,7 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cr4KoYLI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BhvIEIL-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DEKQnmkY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/> <link rel="preload" href="/fonts/inter-400-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-500-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-600-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/><!----><!--ojxrft--><meta name="description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/contato/"/> <meta property="og:url" content="https://psicologobernardo.com.br/contato/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Contato – Psicólogo Bernardo Carielo | Vitória ES e Online"/> <meta property="og:description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Contato – Psicólogo Bernardo Carielo | Vitória ES e Online"/> <meta name="twitter:description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"ContactPage","name":"Contato - Psicólogo Bernardo Carielo","description":"Entre em contato para agendar sua consulta. Atendimento presencial e online.","mainEntity":{"@type":"LocalBusiness","name":"Bernardo Carielo Psicólogo","telephone":"+55 27 99833-1228","email":"contato@psicologobernardo.com.br","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"hasMap":"https://www.google.com/maps/place/Bernardo+Carielo+Psic%C3%B3logo/@-20.2798925,-40.3009252,1019m/data=!3m2!1e3!4b1!4m6!3m5!1s0xb8171b61b8e13b:0x5bab77942d3119e5!8m2!3d-20.2798925!4d-40.3009252!16s%2Fg%2F11hdqw304k?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Contato"}]}</script><!----><!----><title>Contato – Psicólogo Bernardo Carielo | Vitória ES e Online</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/contato/"/> <meta property="og:url" content="https://psicologobernardo.com.br/contato/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Contato – Psicólogo Bernardo Carielo | Vitória ES e Online"/> <meta property="og:description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Contato – Psicólogo Bernardo Carielo | Vitória ES e Online"/> <meta name="twitter:description" content="Entre em contato com Bernardo Carielo, psicólogo em Vitória ES. Atendimento presencial em Jardim da Penha e online para todo o Brasil. WhatsApp (27) 99833-1228."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"ContactPage","name":"Contato - Psicólogo Bernardo Carielo","description":"Entre em contato para agendar sua consulta. Atendimento presencial e online.","mainEntity":{"@type":"LocalBusiness","name":"Bernardo Carielo Psicólogo","telephone":"+55 27 99833-1228","email":"contato@psicologobernardo.com.br","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"hasMap":"https://www.google.com/maps/place/Bernardo+Carielo+Psic%C3%B3logo/@-20.2798925,-40.3009252,1019m/data=!3m2!1e3!4b1!4m6!3m5!1s0xb8171b61b8e13b:0x5bab77942d3119e5!8m2!3d-20.2798925!4d-40.3009252!16s%2Fg%2F11hdqw304k?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Contato"}]}</script><!----><!----><title>Contato – Psicólogo Bernardo Carielo | Vitória ES e Online</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -53,15 +53,15 @@
 			
 			<script>
 				{
-					__sveltekit_ylogt2 = {
+					__sveltekit_ipdxsp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1eZpBPG.js"),
-						import("/_app/immutable/entry/app.BbHIDiPh.js")
+						import("/_app/immutable/entry/start.92SP-Mtw.js"),
+						import("/_app/immutable/entry/app.z11e_xCV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
