--- a/servicos/psicoterapia-individual/index.html
+++ b/servicos/psicoterapia-individual/index.html
@@ -12,19 +12,19 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DOzBfGYh.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -38,7 +38,7 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/PZQF3Y50.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/KeQSjVL6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cr4KoYLI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BhvIEIL-.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/> <link rel="preload" href="/fonts/inter-400-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-500-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-600-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/><!----><!--ojxrft--><meta name="description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <!--[--><link rel="preload" as="image" href="/images/servicos/psicoterapia-individual-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/psicoterapia-individual/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/psicoterapia-individual/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento"/> <meta property="og:description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento"/> <meta name="twitter:description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Psicoterapia Individual","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo","telephone":"+55 27 99833-1228","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50 - Sala 409","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"}}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Psicoterapia Individual"}]}</script><!----><!----><title>Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BhvIEIL-.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <!--[--><link rel="preload" as="image" href="/images/servicos/psicoterapia-individual-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/psicoterapia-individual/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/psicoterapia-individual/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento"/> <meta property="og:description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento"/> <meta name="twitter:description" content="Psicoterapia Individual em Vitória - ES. Espaço de escuta empática e autoconhecimento pela Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Psicoterapia Individual","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo","telephone":"+55 27 99833-1228","address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50 - Sala 409","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"}}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Psicoterapia Individual"}]}</script><!----><!----><title>Psicoterapia Individual em Vitória – Espaço de escuta e autoconhecimento</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -78,15 +78,15 @@
 			
 			<script>
 				{
-					__sveltekit_ylogt2 = {
+					__sveltekit_ipdxsp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1eZpBPG.js"),
-						import("/_app/immutable/entry/app.BbHIDiPh.js")
+						import("/_app/immutable/entry/start.92SP-Mtw.js"),
+						import("/_app/immutable/entry/app.z11e_xCV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 23],
