--- a/servicos/terapia-online/index.html
+++ b/servicos/terapia-online/index.html
@@ -13,19 +13,19 @@
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/26.cju3R6iM.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DOzBfGYh.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -41,7 +41,7 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/BhvIEIL-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/O9apaAtU.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DuyKRhc8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/> <link rel="preload" href="/fonts/inter-400-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-500-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-600-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/><!----><!--ojxrft--><meta name="description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <!--[--><link rel="preload" as="image" href="/images/servicos/terapia-online-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/terapia-online/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/terapia-online/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta property="og:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta name="twitter:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Terapia Online","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo"},"areaServed":{"@type":"Country","name":"Brasil"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Terapia Online"}]}</script><!----><!----><title>Terapia Online em Vitória e todo o Brasil</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <!--[--><link rel="preload" as="image" href="/images/servicos/terapia-online-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/terapia-online/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/terapia-online/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta property="og:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta name="twitter:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Terapia Online","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo"},"areaServed":{"@type":"Country","name":"Brasil"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Terapia Online"}]}</script><!----><!----><title>Terapia Online em Vitória e todo o Brasil</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -63,15 +63,15 @@
 			
 			<script>
 				{
-					__sveltekit_ylogt2 = {
+					__sveltekit_ipdxsp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1eZpBPG.js"),
-						import("/_app/immutable/entry/app.BbHIDiPh.js")
+						import("/_app/immutable/entry/start.92SP-Mtw.js"),
+						import("/_app/immutable/entry/app.z11e_xCV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 26],
