--- a/sobre/index.html
+++ b/sobre/index.html
@@ -12,19 +12,19 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1eZpBPG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DaFr4_-Z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BbHIDiPh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DOzBfGYh.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -40,7 +40,7 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/wvErIrVZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D6jdGk63.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BBoaNq3u.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BUmJ2Kd0.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/> <link rel="preload" href="/fonts/inter-400-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-500-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/> <link rel="preload" href="/fonts/inter-600-latin.woff2" as="font" type="font/woff2" crossorigin="anonymous"/><!----><!--ojxrft--><meta name="description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <!--[--><link rel="preload" as="image" href="/images/sobre/bernardo-profissional.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/sobre/"/> <meta property="og:url" content="https://psicologobernardo.com.br/sobre/"/><!--]--> <meta property="og:type" content="profile"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa"/> <meta property="og:description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/bernardo-avatar.jpg"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa"/> <meta name="twitter:description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/bernardo-avatar.jpg"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","@id":"https://psicologobernardo.com.br/sobre#person","name":"Bernardo Carielo Macedo de Oliveira Pinto","alternateName":"Bernardo Carielo","url":"https://psicologobernardo.com.br/sobre","image":"https://psicologobernardo.com.br/images/bernardo-avatar.jpg","jobTitle":"Psicólogo Clínico","worksFor":{"@type":"Organization","name":"Arranjos Psicologia","url":"https://arranjospsicologia.com.br"},"alumniOf":[{"@type":"EducationalOrganization","name":"Universidade Federal do Espírito Santo","url":"https://ufes.br"}],"knowsAbout":["Abordagem Centrada na Pessoa","Psicoterapia Humanista","Terapia de Casal","Supervisão Clínica"],"address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"telephone":"+5527998331228"}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Sobre"}]}</script><!----><!----><title>Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BUmJ2Kd0.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <!--[--><link rel="preload" as="image" href="/images/sobre/bernardo-profissional.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/sobre/"/> <meta property="og:url" content="https://psicologobernardo.com.br/sobre/"/><!--]--> <meta property="og:type" content="profile"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa"/> <meta property="og:description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/bernardo-avatar.jpg"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa"/> <meta name="twitter:description" content="Conheça Bernardo Carielo (CRP 16/5527), psicólogo clínico em Vitória ES, especialista em Abordagem Centrada na Pessoa. Atendimento presencial em Jardim da Penha e online para todo o Brasil."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/bernardo-avatar.jpg"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","@id":"https://psicologobernardo.com.br/sobre#person","name":"Bernardo Carielo Macedo de Oliveira Pinto","alternateName":"Bernardo Carielo","url":"https://psicologobernardo.com.br/sobre","image":"https://psicologobernardo.com.br/images/bernardo-avatar.jpg","jobTitle":"Psicólogo Clínico","worksFor":{"@type":"Organization","name":"Arranjos Psicologia","url":"https://arranjospsicologia.com.br"},"alumniOf":[{"@type":"EducationalOrganization","name":"Universidade Federal do Espírito Santo","url":"https://ufes.br"}],"knowsAbout":["Abordagem Centrada na Pessoa","Psicoterapia Humanista","Terapia de Casal","Supervisão Clínica"],"address":{"@type":"PostalAddress","streetAddress":"Rua Darcy Grijó, 50, Sala 409, Ed. Madison Office Tower","addressLocality":"Vitória","addressRegion":"ES","postalCode":"29060-500","addressCountry":"BR"},"telephone":"+5527998331228"}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Sobre"}]}</script><!----><!----><title>Sobre Bernardo Carielo – Psicólogo em Vitória ES | Abordagem Centrada na Pessoa</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -63,15 +63,15 @@
 			
 			<script>
 				{
-					__sveltekit_ylogt2 = {
+					__sveltekit_ipdxsp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1eZpBPG.js"),
-						import("/_app/immutable/entry/app.BbHIDiPh.js")
+						import("/_app/immutable/entry/start.92SP-Mtw.js"),
+						import("/_app/immutable/entry/app.z11e_xCV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 27],
