perf: convert all remaining JPG images to WebP format (blog, consultorio, sobre)

--- a/localizacao/psicologo-praia-do-canto/index.html
+++ b/localizacao/psicologo-praia-do-canto/index.html
@@ -12,12 +12,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.92SP-Mtw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Jw9YWYYC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.XXFvZLAQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Dj0V34gR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.z11e_xCV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.EAtgGU48.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -66,15 +66,15 @@
 			
 			<script>
 				{
-					__sveltekit_ipdxsp = {
+					__sveltekit_83kx21 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.92SP-Mtw.js"),
-						import("/_app/immutable/entry/app.z11e_xCV.js")
+						import("/_app/immutable/entry/start.XXFvZLAQ.js"),
+						import("/_app/immutable/entry/app.EAtgGU48.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3, 16],
