fix: broken /psicoterapia/ links + build with 3 new blog posts

--- a/agendar/index.html
+++ b/agendar/index.html
@@ -11,21 +11,21 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link href="/_app/immutable/assets/0.DqFYp-pn.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/6.XbQ8J83m.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.XXFvZLAQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dj0V34gR.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Vz_MCIGn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cb8zItRy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.EAtgGU48.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.aRegroVq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cw_SZe-E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DumiXAwv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CrZ44sGb.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWje2-QR.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.81pCmYdD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGj-ZsQN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZ0IfG7U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CmEVmTvO.js">
@@ -62,15 +62,15 @@
 			
 			<script>
 				{
-					__sveltekit_83kx21 = {
+					__sveltekit_op4nqt = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.XXFvZLAQ.js"),
-						import("/_app/immutable/entry/app.EAtgGU48.js")
+						import("/_app/immutable/entry/start.Vz_MCIGn.js"),
+						import("/_app/immutable/entry/app.aRegroVq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
