--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Vz_MCIGn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cb8zItRy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2bmu8cOV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BVt6KZHg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.aRegroVq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CpUKpKbl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_op4nqt = {
+					__sveltekit_1bya575 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Vz_MCIGn.js"),
-						import("/_app/immutable/entry/app.aRegroVq.js")
+						import("/_app/immutable/entry/start.2bmu8cOV.js"),
+						import("/_app/immutable/entry/app.CpUKpKbl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
