--- a/servicos/terapia-online/index.html
+++ b/servicos/terapia-online/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/_app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/26.cju3R6iM.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Vz_MCIGn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cb8zItRy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2bmu8cOV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BVt6KZHg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.aRegroVq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CpUKpKbl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -34,14 +34,15 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/BygFdk0d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DxIriZvm.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/4.BB54K1Bv.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/26.B7UzU0zF.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/26.BGtFL3Kt.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/PZQF3Y50.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/KeQSjVL6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cr4KoYLI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BhvIEIL-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/O9apaAtU.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DuyKRhc8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <!--[--><link rel="preload" as="image" href="/images/servicos/terapia-online-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/terapia-online/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/terapia-online/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta property="og:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta name="twitter:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Terapia Online","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo"},"areaServed":{"@type":"Country","name":"Brasil"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Terapia Online"}]}</script><!----><!----><title>Terapia Online em Vitória e todo o Brasil</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNG-JJN9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D64xQaDK.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <!--[--><link rel="preload" as="image" href="/images/servicos/terapia-online-hero.webp" fetchpriority="high"/><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/servicos/terapia-online/"/> <meta property="og:url" content="https://psicologobernardo.com.br/servicos/terapia-online/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta property="og:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia Online em Vitória e todo o Brasil"/> <meta name="twitter:description" content="Terapia Online para todo o Brasil. Psicoterapia pela Abordagem Centrada na Pessoa com a mesma qualidade do atendimento presencial. Autorizada pelo CFP."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Terapia Online","provider":{"@type":"ProfessionalService","name":"Bernardo Carielo Psicólogo"},"areaServed":{"@type":"Country","name":"Brasil"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Serviços","item":"https://psicologobernardo.com.br/#servicos"},{"@type":"ListItem","position":3,"name":"Terapia Online"}]}</script><!----><!----><title>Terapia Online em Vitória e todo o Brasil</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -63,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_op4nqt = {
+					__sveltekit_1bya575 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Vz_MCIGn.js"),
-						import("/_app/immutable/entry/app.aRegroVq.js")
+						import("/_app/immutable/entry/start.2bmu8cOV.js"),
+						import("/_app/immutable/entry/app.CpUKpKbl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 26],
