--- a/experiencia/ansiedade/index.html
+++ b/experiencia/ansiedade/index.html
@@ -12,12 +12,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/_app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DaYH16tz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/WuoIDv9K.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C2nBtUJu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DMI-NijB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BnGoT6wH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BUOIZ_oQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -64,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_icb0r9 = {
+					__sveltekit_1f5m70b = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DaYH16tz.js"),
-						import("/_app/immutable/entry/app.BnGoT6wH.js")
+						import("/_app/immutable/entry/start.C2nBtUJu.js"),
+						import("/_app/immutable/entry/app.BUOIZ_oQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 9],
