--- a/servicos/grupos-e-rodas/index.html
+++ b/servicos/grupos-e-rodas/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/_app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/20.B-3_37AQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DaYH16tz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/WuoIDv9K.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C2nBtUJu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DMI-NijB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BnGoT6wH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BUOIZ_oQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BUzcI0aO.js">
@@ -66,15 +66,15 @@
 			
 			<script>
 				{
-					__sveltekit_icb0r9 = {
+					__sveltekit_1f5m70b = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DaYH16tz.js"),
-						import("/_app/immutable/entry/app.BnGoT6wH.js")
+						import("/_app/immutable/entry/start.C2nBtUJu.js"),
+						import("/_app/immutable/entry/app.BUOIZ_oQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 20],
