--- a/servicos/grupos-e-rodas/index.html
+++ b/servicos/grupos-e-rodas/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/20.B-3_37AQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.DVry8oKp.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/De3gpSHd.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.CacnW3To.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/BMrAvrbQ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHMKpbDt.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.B4CO0Rob.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUzcI0aO.js">
@@ -66,15 +66,15 @@
 			
 			<script>
 				{
-					__sveltekit_pznunz = {
+					__sveltekit_1gfheyh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.DVry8oKp.js"),
-						import("/app/immutable/entry/app.CHMKpbDt.js")
+						import("/app/immutable/entry/start.CacnW3To.js"),
+						import("/app/immutable/entry/app.B4CO0Rob.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 20],
