--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/app/immutable/entry/start.CacnW3To.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BMrAvrbQ.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.94ZesX9d.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/DFdR2OnQ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.B4CO0Rob.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.QoqiFsvz.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUzcI0aO.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1gfheyh = {
+					__sveltekit_yec2om = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.CacnW3To.js"),
-						import("/app/immutable/entry/app.B4CO0Rob.js")
+						import("/app/immutable/entry/start.94ZesX9d.js"),
+						import("/app/immutable/entry/app.QoqiFsvz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
