--- a/psicoterapia/o-silencio-na-terapia/index.html
+++ b/psicoterapia/o-silencio-na-terapia/index.html
@@ -12,13 +12,13 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link href="/app/immutable/assets/29.o6LiaZMi.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.CacnW3To.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BMrAvrbQ.js">
+		<link href="/app/immutable/assets/29.CFiMg0-e.css" rel="stylesheet">
+		<link rel="modulepreload" href="/app/immutable/entry/start.94ZesX9d.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/DFdR2OnQ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Boz4_rnh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DaioFwfn.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.B4CO0Rob.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.QoqiFsvz.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CXN3EcKo.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUzcI0aO.js">
@@ -33,9 +33,9 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/D4n1bcFc.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/xfZ_n3v6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/rgkrot1y.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.Cn966o__.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.CCG2E6ol.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cu4Kokrg.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/2B44h_8r.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CI6MHlsL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cjb_AQrU.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/rw_l2SiH.js">
@@ -102,15 +102,15 @@
 			
 			<script>
 				{
-					__sveltekit_1gfheyh = {
+					__sveltekit_yec2om = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.CacnW3To.js"),
-						import("/app/immutable/entry/app.B4CO0Rob.js")
+						import("/app/immutable/entry/start.94ZesX9d.js"),
+						import("/app/immutable/entry/app.QoqiFsvz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
