--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/app/immutable/entry/start.KaWkCMqY.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BtqZPd0E.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CwwfNCIa.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_7ego7s = {
+					__sveltekit_pvpifx = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.KaWkCMqY.js"),
-						import("/app/immutable/entry/app.CwwfNCIa.js")
+						import("/app/immutable/entry/start.B75AywE1.js"),
+						import("/app/immutable/entry/app.CHatHlJF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
