--- a/termos-uso/index.html
+++ b/termos-uso/index.html
@@ -12,12 +12,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.DWUTLLlu.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D_3I7cc6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.U_fm_ddW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -32,11 +32,11 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/27.DhMVx5eT.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/27.D26COmtU.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/K-gWj4xc.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BLCFPQqC.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Oq6zDQx7.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--1o4wg1--><meta name="description" content="Termos de Uso do site psicologobernardo.com.br - Condições de utilização e regras de navegação"/> <meta name="robots" content="noindex, nofollow"/><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Termos de Uso"}]}</script><!----><!----><title>Termos de Uso | Psicólogo Bernardo - Bernardo Carielo</title>
+		<link rel="modulepreload" href="/app/immutable/chunks/Oq6zDQx7.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--1o4wg1--><meta name="description" content="Termos de Uso do site psicologobernardo.com.br - Condições de utilização e regras de navegação"/> <meta name="robots" content="noindex, nofollow"/><!----><!--mhuuw7--><!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Termos de Uso"}]}</script><!----><!--]--><!----><title>Termos de Uso | Psicólogo Bernardo - Bernardo Carielo</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -75,15 +75,15 @@
 			
 			<script>
 				{
-					__sveltekit_pvpifx = {
+					__sveltekit_1l9s9qq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B75AywE1.js"),
-						import("/app/immutable/entry/app.CHatHlJF.js")
+						import("/app/immutable/entry/start.DWUTLLlu.js"),
+						import("/app/immutable/entry/app.U_fm_ddW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 27],
