--- a/acp/abordagem-centrada-pessoa/index.html
+++ b/acp/abordagem-centrada-pessoa/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bn7exl1o.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.DWUTLLlu.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D_3I7cc6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.U_fm_ddW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -33,16 +33,16 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.CrnfzK8A.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.NmzFXw3B.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DiiO5xdO.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/K-gWj4xc.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DedJW04g.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CbKiDwtL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cdi2hEzI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/0u8zw4Kr.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"/> <meta property="og:url" content="https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo"/> <meta property="og:description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo"/> <meta name="twitter:description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Abordagem Centrada na Pessoa","item":"https://psicologobernardo.com.br/acp"},{"@type":"ListItem","position":3,"name":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual","item":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"}]},{"@type":"Article","@id":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/#article","mainEntityOfPage":{"@type":"WebPage","@id":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/#webpage"},"headline":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual","description":"Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp","width":1200,"height":630},"datePublished":"2025-01-22","dateModified":"2025-01-22","isAccessibleForFree":true,"inLanguage":"pt-BR","articleSection":"Abordagem Centrada na Pessoa","keywords":"acp","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"acp"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Abordagem Centrada na Pessoa","item":"https://psicologobernardo.com.br/acp"},{"@type":"ListItem","position":3,"name":"O que é a Abordagem Centrada na Pessoa e..."}]}</script><!----><!----><title>O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo</title>
+		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"/> <meta property="og:url" content="https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo"/> <meta property="og:description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo"/> <meta name="twitter:description" content="Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Abordagem Centrada na Pessoa","item":"https://psicologobernardo.com.br/acp"},{"@type":"ListItem","position":3,"name":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual","item":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/"}]},{"@type":"WebPage","@id":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/#webpage","url":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/","name":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo","isPartOf":{"@id":"https://psicologobernardo.com.br/#website"},"mainEntity":{"@id":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/#article"}},{"@type":"Article","@id":"https://psicologobernardo.com.br/acp/abordagem-centrada-pessoa/#article","headline":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual","name":"O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual","description":"Conheça os princípios da Abordagem Centrada na Pessoa, desenvolvida por Carl Rogers, e entenda por que essa forma de fazer psicologia permanece viva e necessária.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/abordagem-centrada-pessoa.webp","width":800,"height":450},"datePublished":"2025-01-22","dateModified":"2025-01-22","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"inLanguage":"pt-BR","isAccessibleForFree":true,"articleSection":"Abordagem Centrada na Pessoa","keywords":["acp"],"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"Abordagem Centrada na Pessoa"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!--[!--><!--]--><!----><title>O que é a Abordagem Centrada na Pessoa e por que ela continua tão atual - Psicólogo Bernardo</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -141,15 +141,15 @@
 			
 			<script>
 				{
-					__sveltekit_pvpifx = {
+					__sveltekit_1l9s9qq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B75AywE1.js"),
-						import("/app/immutable/entry/app.CHatHlJF.js")
+						import("/app/immutable/entry/start.DWUTLLlu.js"),
+						import("/app/immutable/entry/app.U_fm_ddW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
