--- a/homens/index.html
+++ b/homens/index.html
@@ -12,12 +12,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.DWUTLLlu.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D_3I7cc6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.U_fm_ddW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -32,14 +32,14 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/28.fHh0mdEx.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/28.Ppyx0XDm.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DiiO5xdO.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/K-gWj4xc.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DedJW04g.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CbKiDwtL.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cdi2hEzI.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/homens/"/> <meta property="og:url" content="https://psicologobernardo.com.br/homens/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia para Homens - Artigos | Psicólogo Bernardo"/> <meta property="og:description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia para Homens - Artigos | Psicólogo Bernardo"/> <meta name="twitter:description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Terapia para Homens - Psicólogo Bernardo","description":"Artigos sobre masculinidades, emoções e saúde mental masculina","url":"https://psicologobernardo.com.br/homens/","author":{"@type":"Person","name":"Bernardo Carielo","jobTitle":"Psicólogo"}}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Terapia para Homens"}]}</script><!----><!----><title>Terapia para Homens - Artigos | Psicólogo Bernardo</title>
+		<link rel="modulepreload" href="/app/immutable/chunks/Cdi2hEzI.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/homens/"/> <meta property="og:url" content="https://psicologobernardo.com.br/homens/"/><!--]--> <meta property="og:type" content="website"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Terapia para Homens - Artigos | Psicólogo Bernardo"/> <meta property="og:description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <meta property="og:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Terapia para Homens - Artigos | Psicólogo Bernardo"/> <meta name="twitter:description" content="Artigos sobre masculinidades, emoções e saúde mental masculina"/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/og-image.png"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Terapia para Homens - Psicólogo Bernardo","description":"Artigos sobre masculinidades, emoções e saúde mental masculina","url":"https://psicologobernardo.com.br/homens/","author":{"@type":"Person","name":"Bernardo Carielo","jobTitle":"Psicólogo"}}</script><!----><!--]--><!----><!--mhuuw7--><!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Terapia para Homens"}]}</script><!----><!--]--><!----><title>Terapia para Homens - Artigos | Psicólogo Bernardo</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -49,15 +49,15 @@
 			
 			<script>
 				{
-					__sveltekit_pvpifx = {
+					__sveltekit_1l9s9qq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B75AywE1.js"),
-						import("/app/immutable/entry/app.CHatHlJF.js")
+						import("/app/immutable/entry/start.DWUTLLlu.js"),
+						import("/app/immutable/entry/app.U_fm_ddW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 28],
