--- a/psicoterapia/trabalho-interno-vs-performance/index.html
+++ b/psicoterapia/trabalho-interno-vs-performance/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bn7exl1o.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.DWUTLLlu.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D_3I7cc6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.U_fm_ddW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -33,16 +33,16 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.CrnfzK8A.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.NmzFXw3B.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DiiO5xdO.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/K-gWj4xc.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DedJW04g.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CbKiDwtL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cdi2hEzI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/0u8zw4Kr.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"/> <meta property="og:url" content="https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo"/> <meta property="og:description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo"/> <meta name="twitter:description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Psicoterapia","item":"https://psicologobernardo.com.br/psicoterapia"},{"@type":"ListItem","position":3,"name":"Trabalho interno x performance: como medir 'resultado'?","item":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"}]},{"@type":"Article","@id":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/#article","mainEntityOfPage":{"@type":"WebPage","@id":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/#webpage"},"headline":"Trabalho interno x performance: como medir 'resultado'?","description":"Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp","width":1200,"height":630},"datePublished":"2025-10-31","dateModified":"2025-10-31","isAccessibleForFree":true,"inLanguage":"pt-BR","articleSection":"Psicoterapia","keywords":"psicoterapia, acp, saude-mental","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"psicoterapia"},{"@type":"Thing","name":"acp"},{"@type":"Thing","name":"saude-mental"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Psicoterapia","item":"https://psicologobernardo.com.br/psicoterapia"},{"@type":"ListItem","position":3,"name":"Trabalho interno x performance: como med..."}]}</script><!----><!----><title>Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo</title>
+		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"/> <meta property="og:url" content="https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo"/> <meta property="og:description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo"/> <meta name="twitter:description" content="Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Psicoterapia","item":"https://psicologobernardo.com.br/psicoterapia"},{"@type":"ListItem","position":3,"name":"Trabalho interno x performance: como medir 'resultado'?","item":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/"}]},{"@type":"WebPage","@id":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/#webpage","url":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/","name":"Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo","isPartOf":{"@id":"https://psicologobernardo.com.br/#website"},"mainEntity":{"@id":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/#article"}},{"@type":"Article","@id":"https://psicologobernardo.com.br/psicoterapia/trabalho-interno-vs-performance/#article","headline":"Trabalho interno x performance: como medir 'resultado'?","name":"Trabalho interno x performance: como medir 'resultado'?","description":"Em saúde mental, 'resultado' raramente cabe em números. Às vezes, é poder dizer 'não', dormir melhor, ou chorar sem se punir.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/trabalho-interno-vs-performance.webp","width":800,"height":450},"datePublished":"2025-10-31","dateModified":"2025-10-31","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"inLanguage":"pt-BR","isAccessibleForFree":true,"articleSection":"Psicoterapia","keywords":["psicoterapia","acp","saude-mental"],"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"Psicoterapia"},{"@type":"Thing","name":"Abordagem Centrada na Pessoa"},{"@type":"Thing","name":"Saude-mental"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!--[!--><!--]--><!----><title>Trabalho interno x performance: como medir 'resultado'? - Psicólogo Bernardo</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -126,15 +126,15 @@
 			
 			<script>
 				{
-					__sveltekit_pvpifx = {
+					__sveltekit_1l9s9qq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B75AywE1.js"),
-						import("/app/immutable/entry/app.CHatHlJF.js")
+						import("/app/immutable/entry/start.DWUTLLlu.js"),
+						import("/app/immutable/entry/app.U_fm_ddW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
