--- a/saude-mental/nao-somos-maquinas/index.html
+++ b/saude-mental/nao-somos-maquinas/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bn7exl1o.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.B75AywE1.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CqCrrKEL.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.DWUTLLlu.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D_3I7cc6.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.CHatHlJF.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.U_fm_ddW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -33,16 +33,16 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.CrnfzK8A.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.NmzFXw3B.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DiiO5xdO.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/K-gWj4xc.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DedJW04g.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CbKiDwtL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cdi2hEzI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/0u8zw4Kr.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"/> <meta property="og:url" content="https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo"/> <meta property="og:description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo"/> <meta name="twitter:description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Saúde Mental","item":"https://psicologobernardo.com.br/saude-mental"},{"@type":"ListItem","position":3,"name":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano","item":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"}]},{"@type":"Article","@id":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/#article","mainEntityOfPage":{"@type":"WebPage","@id":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/#webpage"},"headline":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano","description":"Por que tentar render cada vez mais nos desconecta de quem realmente somos.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp","width":1200,"height":630},"datePublished":"2025-11-02","dateModified":"2025-11-02","isAccessibleForFree":true,"inLanguage":"pt-BR","articleSection":"Saúde Mental","keywords":"saude-mental, autoconhecimento, acp","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"saude-mental"},{"@type":"Thing","name":"autoconhecimento"},{"@type":"Thing","name":"acp"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!----><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Saúde Mental","item":"https://psicologobernardo.com.br/saude-mental"},{"@type":"ListItem","position":3,"name":"Não somos máquinas: o mito da produtivid..."}]}</script><!----><!----><title>Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo</title>
+		<link rel="modulepreload" href="/app/immutable/chunks/Cr0G-FUx.js"><!--12qhfyh--><meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96"/> <link rel="icon" href="/favicon.ico"/><!----><!--ojxrft--><meta name="description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <!--[!--><!--]--> <!--[--><link rel="canonical" href="https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"/> <meta property="og:url" content="https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"/><!--]--> <meta property="og:type" content="article"/> <meta property="og:locale" content="pt_BR"/> <meta property="og:site_name" content="Psicólogo Bernardo"/> <meta property="og:title" content="Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo"/> <meta property="og:description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <meta property="og:image" content="https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo"/> <meta name="twitter:description" content="Por que tentar render cada vez mais nos desconecta de quem realmente somos."/> <meta name="twitter:image" content="https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp"/> <!--[--><!----><script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Início","item":"https://psicologobernardo.com.br/"},{"@type":"ListItem","position":2,"name":"Saúde Mental","item":"https://psicologobernardo.com.br/saude-mental"},{"@type":"ListItem","position":3,"name":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano","item":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/"}]},{"@type":"WebPage","@id":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/#webpage","url":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/","name":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo","isPartOf":{"@id":"https://psicologobernardo.com.br/#website"},"mainEntity":{"@id":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/#article"}},{"@type":"Article","@id":"https://psicologobernardo.com.br/saude-mental/nao-somos-maquinas/#article","headline":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano","name":"Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano","description":"Por que tentar render cada vez mais nos desconecta de quem realmente somos.","image":{"@type":"ImageObject","url":"https://psicologobernardo.com.br/images/blog/nao-somos-maquinas.webp","width":800,"height":450},"datePublished":"2025-11-02","dateModified":"2025-11-02","author":{"@id":"https://psicologobernardo.com.br/sobre/#person"},"publisher":{"@id":"https://psicologobernardo.com.br/#organization"},"inLanguage":"pt-BR","isAccessibleForFree":true,"articleSection":"Saúde Mental","keywords":["saude-mental","autoconhecimento","acp"],"audience":{"@type":"Audience","audienceType":"General public"},"about":[{"@type":"Thing","name":"Saúde Mental"},{"@type":"Thing","name":"Autoconhecimento"},{"@type":"Thing","name":"Abordagem Centrada na Pessoa"}]}]}</script><!----><!--]--><!----><!--mhuuw7--><!--[!--><!--]--><!----><title>Não somos máquinas: o mito da produtividade infinita e o esgotamento do humano - Psicólogo Bernardo</title>
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -137,15 +137,15 @@
 			
 			<script>
 				{
-					__sveltekit_pvpifx = {
+					__sveltekit_1l9s9qq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B75AywE1.js"),
-						import("/app/immutable/entry/app.CHatHlJF.js")
+						import("/app/immutable/entry/start.DWUTLLlu.js"),
+						import("/app/immutable/entry/app.U_fm_ddW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
